# dmx-analyzer

./: README.md
code/: .gitignore  Cargo.toml  CrossCompileConfig.toml  DockerConfig.toml  Dockerfile  WSLConfig.toml  docker-compose.yaml  run.sh
code/src/: gpio.rs  main_simulated_display.rs  render_engine.rs  simulated_display.rs  test_sigrok.rs  test_spi.rs  views.rs
code/src/dmx_analyzer/: dmx_state_machine.rs
code/src/views/: dmx_info_screen.rs
code/src/views/dmx_info_screen/: length.rs
concludingPresentation/: main.tex  main.toc
uDMX commandline/: uDMX.c
