[package]
name = "led-matrix-controller"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Klaus"]
license = "GPL-3.0"
default-run = "main"

[dependencies]
rpi-led-matrix = { version = "0.4.0", optional = true}
embedded-graphics-simulator = { version = "0.4.0", optional = true}
cascade = "1.0.0"
embedded-graphics = "0.7.1"
nalgebra = "0.31.1"
wavefront_obj = "10.0.0"
rppal =  { version = "0.13.1", optional = true}
libc = { version = "0.2.135"}
scheduler = { version = "0.1.3", optional = true}
hwloc = { version = "0.5.0"}

[features]
default = ["rpi-led-matrix"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["rpi-led-matrix"]

[[bin]]
name = "gpio"
path = "src/gpio.rs"
required-features = ["rppal"]

# cargo run with --no-default-features flag
[[bin]]
name = "simulate-display"
path = "src/simulated_display.rs"
required-features = ["embedded-graphics-simulator"]
